--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ header h1 {
 }
 
 .album-title {
-  font-size: 2.5rem;
+  font-size: clamp(2.5rem, 5vw, 4rem);
   font-weight: 500;
   opacity: 0.9;
   margin-bottom: 2.5rem;
@@ -457,10 +457,6 @@ footer {
     font-size: 2.5rem;
   }
   
-  .album-title {
-    font-size: 2.5rem;
-  }
-  
   nav {
     flex-direction: column;
     align-items: center;
@@ -560,6 +556,7 @@ nav a:focus,
   }
 
 }
+
 
 
 
