--- a/style.css
+++ b/style.css
@@ -495,6 +495,9 @@ footer {
     width: 250px;
     justify-content: center;
   }
+    .album-title {
+    font-size: 3rem;
+  }
 }
 
 @media (max-width: 480px) {
@@ -556,6 +559,7 @@ nav a:focus,
   }
 
 }
+
 
 
 
